# Near-Protocol-Chainlink

./: .gitignore  README.md  completion_list.txt
AccessControlledAggregator/: Cargo.toml
contract-wrap/: Cargo.toml
contract-wrap/AccessControlledAggregator/: Cargo.toml
contract-wrap/AccessControlledAggregator/src/: lib.rs
contract-wrap/AggregatorVaildatorMock/: Cargo.toml
contract-wrap/AggregatorVaildatorMock/src/: lib.rs
contract-wrap/Consumer/: Cargo.toml
contract-wrap/Consumer/src/: lib.rs
contract-wrap/EACAggregatorProxy/: Cargo.toml
contract-wrap/EACAggregatorProxy/src/: lib.rs
contract-wrap/Flags/: Cargo.toml
contract-wrap/Flags/src/: lib.rs
contract-wrap/FlagsTestHelper/: Cargo.toml
contract-wrap/FluxAggregator/: Cargo.toml
contract-wrap/FluxAggregator/src/: lib.rs
contract-wrap/FluxAggregatorTestHelper/: Cargo.toml
contract-wrap/FluxAggregatorTestHelper/src/: lib.rs
contract-wrap/LinkToken/: Cargo.toml
contract-wrap/LinkToken/src/: lib.rs
contract-wrap/MockV3Aggregator/: Cargo.toml
contract-wrap/MockV3Aggregator/src/: lib.rs
contract-wrap/SimpleReadAccessController/: Cargo.toml
contract-wrap/SimpleReadAccessController/src/: lib.rs
contract-wrap/SimpleWriteAccessController/: Cargo.toml
contract-wrap/SimpleWriteAccessController/src/: lib.rs
contract-wrap/access_controlled_aggregator/: Cargo.toml
contract-wrap/access_controlled_aggregator/src/: lib.rs
contract-wrap/aggregator_vaildator_mock/: Cargo.toml
contract-wrap/aggregator_vaildator_mock/src/: lib.rs
contract-wrap/eac_aggregator_proxy/: Cargo.toml
contract-wrap/eac_aggregator_proxy/src/: lib.rs
contract-wrap/flags_test_helper/: Cargo.toml
contract-wrap/flags_test_helper/src/: lib.rs
contract-wrap/flux_aggregator/: Cargo.toml
contract-wrap/flux_aggregator/src/: lib.rs
contract-wrap/flux_aggregator_test_helper/: Cargo.toml
contract-wrap/flux_aggregator_test_helper/src/: lib.rs
contract-wrap/link_token/: Cargo.toml
contract-wrap/link_token/src/: lib.rs
contract-wrap/mock_v3_aggregator/: Cargo.toml
contract-wrap/mock_v3_aggregator/src/: lib.rs
contract-wrap/simple_read_access_controller/: Cargo.toml
contract-wrap/simple_read_access_controller/src/: lib.rs
contract-wrap/simple_write_access_controller/: Cargo.toml
contract-wrap/simple_write_access_controller/src/: lib.rs
contract-wrap/tests/sim/: aca_flux_agg_tests.rs  aca_tests.rs  eac_tests.rs  first_tests.rs  flags_tests.rs  flux_agg_tests.rs  main.rs  utils.rs
contract-wrap/tests/sim/ACA-AccessControl-tests/: first_tests.rs  utils.rs
contract-wrap/tests/sim/ACA-tests/: main.rs
testing/testfunctions/: Cargo.toml  README.md
testing/testfunctions/res/: testfunctions.wasm
testing/testfunctions/scripts/: build.sh
testing/testfunctions/src/: lib.rs
(+47 files in other folders)
